Adding Gulp, Sass, Jade. Templates partialisation

--- a/src/sass/_debug.sass
+++ b/src/sass/_debug.sass
@@ -1,5 +1,4 @@
 .debug
-
 	.large-1of2,
 
 	.large-1of3,
@@ -49,3 +48,7 @@
 			
 		&:nth-child(6n)
 			background: #3cd2d3 
+
+
+	p
+		background: #fff
