Gutter in variables, initial media queries

--- a/src/sass/_grid.sass
+++ b/src/sass/_grid.sass
@@ -11,8 +11,6 @@ body
 		clear: both
 
 
-$gridGutter: 30px
-
 .large-1of2,
 
 .large-1of3,
@@ -40,8 +38,8 @@ $gridGutter: 30px
 .large-1of10
 	box-sizing: border-box
 	padding:
-		left: $gridGutter/2
-		right: $gridGutter/2
+		left: $gridGutterLarge/2
+		right: $gridGutterLarge/2
 
 	float: left
 
@@ -195,52 +193,8 @@ $gridGutter: 30px
 	width: 10%
 
 
-// @media (max-width: 800px)
-// 	.large-1of2,		
-// 	.large-1of4,
-// 	.large-1of5,
-// 	.large-1of8,
-// 	.large-1of10
-// 		width: 100%
+	
 
-
-// 	.medium-1of2
-// 		width: 50%
-
-// 	.medium-1of4 
-// 		width: 25%
-
-// 	.medium-1of5 
-// 		width: 20%
-
-// 	.medium-1of8 
-// 		width: 12.5%
-
-// 	.medium-1of10
-// 		width: 10%
-
-// @media (max-width: 400px)
-// 	.medium-1of2,		
-// 	.medium-1of4,
-// 	.medium-1of5,
-// 	.medium-1of8,
-// 	.medium-1of10
-// 		width: 100%
-
-// 	.small-1of2
-// 		width: 50%
-
-// 	.small-1of4 
-// 		width: 25%
-
-// 	.small-1of5 
-// 		width: 20%
-
-// 	.small-1of8 
-// 		width: 12.5%
-
-// 	.small-1of10
-// 		width: 10%
 
 
 
