--- a/src/sass/_mq.medium.sass
+++ b/src/sass/_mq.medium.sass
@@ -1,29 +1,5 @@
 @media only screen and (min-width: $mediumMin) and (max-width: $mediumMax)
-	.medium-1of2,
-
-	.medium-1of3,
-	.medium-2of3,
-
-	.medium-1of4,
-	.medium-3of4,
-
-	.medium-1of5,
-	.medium-2of5,
-	.medium-3of5,
-	.medium-4of5,
-
-	.medium-1of6,
-
-	.medium-1of7,
-
-	.medium-1of8,
-	.medium-3of8,
-	.medium-5of8,
-	.medium-7of8,
-
-	.medium-1of9,
-
-	.medium-1of10
+	[class|="medium"]
 		box-sizing: border-box
 		padding:
 			left: $gridGutterMedium/2
@@ -173,8 +149,8 @@
 	.medium-7of9
 		width: percentage(7/9)
 
-	.medium-2of9
-		width: percentage(1/9)
+	.medium-8of9
+		width: percentage(8/9)
 
 	// n of 10
 	.medium-1of10
