--- a/src/sass/_mq.small.sass
+++ b/src/sass/_mq.small.sass
@@ -1,29 +1,5 @@
 @media only screen and (max-width: $smallMax)
-	.small-1of2,
-
-	.small-1of3,
-	.small-2of3,
-
-	.small-1of4,
-	.small-3of4,
-
-	.small-1of5,
-	.small-2of5,
-	.small-3of5,
-	.small-4of5,
-
-	.small-1of6,
-
-	.small-1of7,
-
-	.small-1of8,
-	.small-3of8,
-	.small-5of8,
-	.small-7of8,
-
-	.small-1of9,
-
-	.small-1of10
+	[class|="small"]
 		box-sizing: border-box
 		padding:
 			left: $gridGutterSmall/2
