--- a/src/sass/_variables.sass
+++ b/src/sass/_variables.sass
@@ -1,10 +1,13 @@
+// ********************
 // Grid gutter
+// ********************
 $gridGutterLarge: 30px
 $gridGutterMedium: 30px
 $gridGutterSmall: 30px
 
-
+// ********************
 // Media Queries 
+// ********************
 $smallMax: 400px
 $mediumMin: 401px 
 $mediumMax: 800px
