--- a/src/templates/partials/_of2.jade
+++ b/src/templates/partials/_of2.jade
@@ -1,3 +1,6 @@
 .row
-  .small-1of10.large-1of2 .large-1of2
-  .large-1of2 .large-1of2
+	.large-1of2 .large-1of2
+	.large-1of2 .large-1of2
+
+.row
+	.large-1of2.offset-large-1of2 .large-1of2 .offset-large-1of2
