--- a/src/templates/partials/_of3.jade
+++ b/src/templates/partials/_of3.jade
@@ -10,4 +10,9 @@
   .large-2of3 .large-2of3
   .large-1of3 .large-1of3
 
+.row
+  .large-1of3.offset-large-1of3 .large-1of3 .offset-large-1of3
+.row
+  .large-1of3.offset-large-2of3 .large-1of3 .offset-large-2of3
+
    
