--- a/src/templates/partials/_of4.jade
+++ b/src/templates/partials/_of4.jade
@@ -11,3 +11,12 @@
   .large-1of4 .large-1of4
   .large-3of4 .large-3of4
 
+.row
+  .large-1of4.offset-large-1of4 .large-1of4
+  
+.row
+  .large-1of4.offset-large-2of4 .large-1of4
+  
+.row
+  .large-1of4.offset-large-3of4 .large-1of4
+  
