Offsets, Breakpoint, Mixin

--- a/src/sass/_debug.sass
+++ b/src/sass/_debug.sass
@@ -1,97 +1,155 @@
 .debug
-	.row:nth-child(1n)
-		[class|="large"],
-		[class|="medium"],
-		[class|="small"]
-			// For dev only
-			border:
-				right: 1px solid #000
-			padding:
-				top: 10px
-				bottom: 10px
+	.row
+		&:nth-child(1n)
+			[class|="large"],
+			[class|="medium"],
+			[class|="small"]
+				// For dev only
+				// border:
+				// 	right: 1px solid #000
+				padding:
+					top: 10px
+					bottom: 10px
 
-			&:nth-child(1n)
-				background: #476565
+				&:nth-child(1n)
+					background: #476565
 
-			&:nth-child(2n)
-				background: #5f7e79 
+				&:nth-child(2n)
+					background: #5f7e79 
 
-			&:nth-child(3n)
-				background: #84a3a5
+				&:nth-child(3n)
+					background: #84a3a5
 
-			&:nth-child(4n)
-				background: #7dc3c3 
+				&:nth-child(4n)
+					background: #7dc3c3 
 
-			&:nth-child(5n)
-				background: #c7e1d4 
-				
-			&:nth-child(6n)
-				background: #3cd2d3 
-
-		p
-			background: #fff
+				&:nth-child(5n)
+					background: #c7e1d4 
+					
+				&:nth-child(6n)
+					background: #3cd2d3 
 
 
-	.row:nth-child(2n)
-		[class|="large"],
-		[class|="medium"],
-		[class|="small"]
-			// For dev only
-			border:
-				right: 1px solid #000
-			padding:
-				top: 10px
-				bottom: 10px
 
-			&:nth-child(1n)
-				background: #ba3725
 
-			&:nth-child(2n)
-				background: #bf3d27 
+		&:nth-child(2n)
+			[class|="large"],
+			[class|="medium"],
+			[class|="small"]
+				// For dev only
+				// border:
+				// 	right: 1px solid #000
+				padding:
+					top: 10px
+					bottom: 10px
 
-			&:nth-child(3n)
-				background: #f68817
+				&:nth-child(1n)
+					background: #ba3725
 
-			&:nth-child(4n)
-				background: #f6c82c 
+				&:nth-child(2n)
+					background: #bf3d27 
 
-			&:nth-child(5n)
-				background: #ffe434 
-				
-			&:nth-child(6n)
-				background: #dbdaa1 
+				&:nth-child(3n)
+					background: #f68817
 
-		p
-			background: #fff
+				&:nth-child(4n)
+					background: #f6c82c 
 
-	.row:nth-child(3n)
-		[class|="large"],
-		[class|="medium"],
-		[class|="small"]
-			// For dev only
-			border:
-				right: 1px solid #000
-			padding:
-				top: 10px
-				bottom: 10px
+				&:nth-child(5n)
+					background: #ffe434 
+					
+				&:nth-child(6n)
+					background: #dbdaa1 
 
-			&:nth-child(1n)
-				background: #476565
 
-			&:nth-child(2n)
-				background: #5f7e79 
 
-			&:nth-child(3n)
-				background: #84a3a5
+		&:nth-child(3n)
+			[class|="large"],
+			[class|="medium"],
+			[class|="small"]
+				// For dev only
+				// border:
+				// 	right: 1px solid #000
+				padding:
+					top: 10px
+					bottom: 10px
 
-			&:nth-child(4n)
-				background: #7dc3c3 
+				&:nth-child(1n)
+					background: #476565
 
-			&:nth-child(5n)
-				background: #c7e1d4 
-				
-			&:nth-child(6n)
-				background: #3cd2d3 
+				&:nth-child(2n)
+					background: #5f7e79 
 
-		p
-			background: #fff
+				&:nth-child(3n)
+					background: #84a3a5
+
+				&:nth-child(4n)
+					background: #7dc3c3 
+
+				&:nth-child(5n)
+					background: #c7e1d4 
+					
+				&:nth-child(6n)
+					background: #3cd2d3 
+
+
+		&:nth-child(4n)
+			[class|="large"],
+			[class|="medium"],
+			[class|="small"]
+				// For dev only
+				// border:
+				// 	right: 1px solid #000
+				padding:
+					top: 10px
+					bottom: 10px
+
+				&:nth-child(1n)
+					background: #eee8c4
+
+				&:nth-child(2n)
+					background: #d37488 
+
+				&:nth-child(3n)
+					background: #6a5460
+
+				&:nth-child(4n)
+					background: #b3313b 
+
+				&:nth-child(5n)
+					background: #69535f 
+					
+				&:nth-child(6n)
+					background: #31212b 	
+
+
+		&:nth-child(4n)
+			[class|="large"],
+			[class|="medium"],
+			[class|="small"]
+				// For dev only
+				// border:
+				// 	right: 1px solid #000
+				padding:
+					top: 10px
+					bottom: 10px
+
+				&:nth-child(1n)
+					background: #eee8c4
+
+				&:nth-child(2n)
+					background: #d37488 
+
+				&:nth-child(3n)
+					background: #6a5460
+
+				&:nth-child(4n)
+					background: #b3313b 
+
+				&:nth-child(5n)
+					background: #69535f 
+					
+				&:nth-child(6n)
+					background: #31212b 
+
+
