--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,8 +1,10 @@
+@import "breakpoint";
 @import "variables";
 
 @import "mixins";
+@import "debug";
 
 @import "grid";
-@import "mq.small";
-@import "mq.medium";
+// @import "mq.small";
+// @import "mq.medium";
 
