--- a/src/templates/partials/_of5.jade
+++ b/src/templates/partials/_of5.jade
@@ -27,3 +27,15 @@
   .large-1of5 .large-1of5
   .large-1of5 .large-1of5
 
+.row
+  .large-4of5.offset-large-1of5 .large-1of5
+
+.row
+  .large-3of5.offset-large-2of5 .large-1of5
+
+.row
+  .large-2of5.offset-large-3of5 .large-1of5
+
+.row
+  .large-1of5.offset-large-4of5 .large-1of5
+
