--- a/src/templates/partials/_of6.jade
+++ b/src/templates/partials/_of6.jade
@@ -9,3 +9,17 @@
   .large-1of6 .large-1of6
   .large-1of6 .large-1of6
 
+.row
+  .large-5of6.offset-large-1of6 .large-1of6
+
+.row
+  .large-4of6.offset-large-2of6 .large-1of6
+
+.row
+  .large-3of6.offset-large-3of6 .large-1of6
+
+.row
+  .large-2of6.offset-large-4of6 .large-1of6
+
+.row
+  .large-1of6.offset-large-5of6 .large-1of6
