--- a/src/templates/partials/_of8.jade
+++ b/src/templates/partials/_of8.jade
@@ -10,3 +10,24 @@
   .large-1of8 .large-1of8
   .large-1of8 .large-1of8
   .large-1of8 .large-1of8
+
+.row
+  .large-7of8.offset-large-1of8 .large-1of8
+
+.row
+  .large-6of8.offset-large-2of8 .large-1of8
+
+.row
+  .large-5of8.offset-large-3of8 .large-1of8
+
+.row
+  .large-4of8.offset-large-4of8 .large-1of8
+
+.row
+  .large-3of8.offset-large-5of8 .large-1of8
+
+.row
+  .large-2of8.offset-large-6of8 .large-1of8
+
+.row
+  .large-1of8.offset-large-7of8 .large-1of8
