--- a/src/templates/partials/_of9.jade
+++ b/src/templates/partials/_of9.jade
@@ -11,3 +11,27 @@
   .large-1of9 .large-1of9
   .large-1of9 .large-1of9
   .large-1of9 .large-1of9
+
+.row
+  .large-8of9.offset-large-1of9 .large-1of9
+
+.row
+  .large-7of9.offset-large-2of9 .large-1of9
+
+.row
+  .large-6of9.offset-large-3of9 .large-1of9
+
+.row
+  .large-5of9.offset-large-4of9 .large-1of9
+
+.row
+  .large-4of9.offset-large-5of9 .large-1of9
+
+.row
+  .large-3of9.offset-large-6of9 .large-1of9
+
+.row
+  .large-2of9.offset-large-7of9 .large-1of9
+
+.row
+  .large-1of9.offset-large-8of9 .large-1of9
