--- a/src/sass/_grid.sass
+++ b/src/sass/_grid.sass
@@ -10,7 +10,23 @@ body
 		height: 0
 		clear: both
 
-[class|="large"]
+[class|="small"]
+	box-sizing: border-box
+	padding:
+		left: $gridGutterSmall/2
+		right: $gridGutterSmall/2
+
+	float: left 
+
+[class|="medium"]
+	box-sizing: border-box
+	padding:
+		left: $gridGutterMedium/2
+		right: $gridGutterMedium/2
+
+	float: left
+
+[class|="large"],
 	box-sizing: border-box
 	padding:
 		left: $gridGutterLarge/2
@@ -18,273 +34,17 @@ body
 
 	float: left
 
-	// For dev only
-	border:
-		right: 1px solid #000
-	padding:
-		top: 10px
-		bottom: 10px
-
-	&:nth-child(1n)
-		background: #476565
-
-	&:nth-child(2n)
-		background: #5f7e79 
-
-	&:nth-child(3n)
-		background: #84a3a5
-
-	&:nth-child(4n)
-		background: #7dc3c3 
-
-	&:nth-child(5n)
-		background: #c7e1d4 
-		
-	&:nth-child(6n)
-		background: #3cd2d3 
-
-
-.large-1of2
-	width: 50%
-
-.offset-large-1of2
-	margin-left: 50%
-
-// n of 3
-.large-1of3
-	width: percentage(1/3)
-
-.large-2of3
-	width: percentage(2/3)
-
-
-.offset-large-1of3
-	margin-left: percentage(1/3)
-
-.offset-large-2of3
-	margin-left: percentage(2/3)
-
-
-// n of 4
-.large-1of4 
-	width: 25%
-
-.large-2of4
-	width: 50%
-
-.large-3of4 
-	width: 75%
-
-.offset-large-1of4
-	margin-left: percentage(1/4)
-
-.offset-large-2of4
-	margin-left: percentage(2/4)
-
-.offset-large-3of4
-	margin-left: percentage(3/4)
-
-
-// n of 5
-.large-1of5 
-	width: percentage(1/5)
-
-.large-2of5 
-	width: percentage(2/5)
-
-.large-3of5 
-	width: percentage(3/5)
-
-.large-4of5 
-	width: percentage(4/5)
-
-.offset-large-1of5 
-	margin-left: percentage(1/5)
-
-.offset-large-2of5 
-	margin-left: percentage(2/5)
-
-.offset-large-3of5 
-	margin-left: percentage(3/5)
-
-.offset-large-4of5 
-	margin-left: percentage(4/5)
-
-
-// n of 6
-.large-1of6
-	width: percentage(1/6)
-
-.large-2of6
-	width: percentage(2/6)
-
-.large-3of6
-	width: percentage(3/6)
-
-.large-4of6
-	width: percentage(4/6)
-
-.large-5of6
-	width: percentage(5/6)
-
-.offset-large-1of6
-	margin-left: percentage(1/6)
-
-.offset-large-2of6
-	margin-left: percentage(2/6)
-
-.offset-large-3of6
-	margin-left: percentage(3/6)
-
-.offset-large-4of6
-	margin-left: percentage(4/6)
-
-.offset-large-5of6
-	margin-left: percentage(5/6)
-
-
-// n of 7
-.large-1of7
-	width: percentage(1/7)
-
-.large-2of7
-	width: percentage(2/7)
-
-.large-3of7
-	width: percentage(3/7)
-
-.large-4of7
-	width: percentage(4/7)
-
-.large-5of7
-	width: percentage(5/7)
-
-.large-6of7
-	width: percentage(6/7)
-
-
-.offset-large-1of7
-	margin-left: percentage(1/7)
-
-.offset-large-2of7
-	margin-left: percentage(2/7)
-
-.offset-large-3of7
-	margin-left: percentage(3/7)
-
-.offset-large-4of7
-	margin-left: percentage(4/7)
-
-.offset-large-5of7
-	margin-left: percentage(5/7)
-
-.offset-large-6of7
-	margin-left: percentage(6/7)
-
-
-
-// n of 8
-.large-1of8 
-	width: percentage(1/8) //12.5%
-
-.large-2of8 
-	width: percentage(2/8) //25%
-	
-.large-3of8 
-	width: percentage(3/8) //37.5%
-
-.large-4of8 
-	width: percentage(4/8) //50%
-
-.large-5of8 
-	width: percentage(5/8) //62.5%
-
-.large-6of8 
-	width: percentage(6/8) //75%
-
-.large-7of8 
-	width: percentage(7/8) //87.5%
-
-.offset-large-1of8 
-	margin-left: percentage(1/8) //12.5%
-
-.offset-large-2of8 
-	margin-left: percentage(2/8) //25%
-	
-.offset-large-3of8 
-	margin-left: percentage(3/8) //37.5%
-
-.offset-large-4of8 
-	margin-left: percentage(4/8) //50%
-
-.offset-large-5of8 
-	margin-left: percentage(5/8) //62.5%
-
-.offset-large-6of8 
-	margin-left: percentage(6/8) //75%
-
-.offset-large-7of8 
-	margin-left: percentage(7/8) //87.5%
-
-
-
-// n of 9
-.large-1of9
-	width: percentage(1/9)
-
-.large-2of9
-	width: percentage(2/9)
-
-.large-3of9
-	width: percentage(3/9)
-
-.large-4of9
-	width: percentage(4/9)
-
-.large-5of9
-	width: percentage(5/9)
-
-.large-6of9
-	width: percentage(6/9)
-
-.large-7of9
-	width: percentage(7/9)
-
-.large-8of9
-	width: percentage(8/9)
-
-.offset-large-1of9
-	margin-left: percentage(1/9)
-
-.offset-large-2of9
-	margin-left: percentage(2/9)
-
-.offset-large-3of9
-	margin-left: percentage(3/9)
-
-.offset-large-4of9
-	margin-left: percentage(4/9)
-
-.offset-large-5of9
-	margin-left: percentage(5/9)
-
-.offset-large-6of9
-	margin-left: percentage(6/9)
-
-.offset-large-7of9
-	margin-left: percentage(7/9)
-
-.offset-large-8of9
-	margin-left: percentage(8/9)
-
-
-// n of 10
-.large-1of10
-	width: 10%
-
-
-	
-
-
-
-
+@include buildGrid(2)
+@include buildGrid(3)
+@include buildGrid(4)
+@include buildGrid(5)
+@include buildGrid(6)
+@include buildGrid(7)
+@include buildGrid(8)
+@include buildGrid(9)
+@include buildGrid(10)
+@include buildGrid(11)
+@include buildGrid(13)
+@include buildGrid(14)
+@include buildGrid(15)
+@include buildGrid(16)
