--- a/src/templates/partials/_of7.jade
+++ b/src/templates/partials/_of7.jade
@@ -10,3 +10,20 @@
   .large-1of7 .large-1of7
   .large-1of7 .large-1of7
 
+.row
+  .large-6of7.offset-large-1of7 .large-1of7
+
+.row
+  .large-5of7.offset-large-2of7 .large-1of7
+
+.row
+  .large-4of7.offset-large-3of7 .large-1of7
+
+.row
+  .large-3of7.offset-large-4of7 .large-1of7
+
+.row
+  .large-2of7.offset-large-5of7 .large-1of7
+
+.row
+  .large-1of7.offset-large-6of7 .large-1of7
