--- a/src/sass/_grid.sass
+++ b/src/sass/_grid.sass
@@ -44,7 +44,18 @@ body
 @include buildGrid(9)
 @include buildGrid(10)
 @include buildGrid(11)
+@include buildGrid(12)
 @include buildGrid(13)
 @include buildGrid(14)
 @include buildGrid(15)
 @include buildGrid(16)
+
+.wrapper
+	max-width: 1200px
+	margin: 0 auto
+	padding: 0 $gridGutterLarge
+
+	&.b2b
+		padding: 0
+
+	
