--- a/src/templates/index.jade
+++ b/src/templates/index.jade
@@ -10,6 +10,8 @@ html
 
 
   body.debug
+    include partials/header.jade
+
     include partials/_of2.jade
     include partials/_of3.jade
     include partials/_of4.jade
@@ -19,3 +21,8 @@ html
     include partials/_of8.jade
     include partials/_of9.jade
     include partials/_of10.jade
+    include partials/_of11.jade
+    include partials/_of12.jade
+    include partials/_of16.jade
+
+    include partials/footer.jade
