--- a/src/templates/partials/_of2.jade
+++ b/src/templates/partials/_of2.jade
@@ -1,6 +1,81 @@
 .row
+	h2 .large-1of2
+.row
 	.large-1of2 .large-1of2
 	.large-1of2 .large-1of2
 
 .row
 	.large-1of2.offset-large-1of2 .large-1of2 .offset-large-1of2
+
+.row
+	h2 .large-1of2 in .wrapper
+	
+.row.wrapper
+	.large-1of2 .large-1of2
+	.large-1of2 .large-1of2
+
+.row.wrapper
+	.large-1of2.offset-large-1of2 .large-1of2 .offset-large-1of2
+
+
+.row
+	h2 .large-1of2 in .wrapper.b2b
+
+.row.wrapper.b2b
+	.large-1of2 .large-1of2
+	.large-1of2 .large-1of2
+
+.row.wrapper.b2b
+	.large-1of2.offset-large-1of2 .large-1of2 .offset-large-1of2
+
+
+
+
+.row
+	h2 .medium-1of2 in .wrapper.b2b
+
+.row
+	.medium-1of2 .medium-1of2
+	.medium-1of2 .medium-1of2
+
+.row
+	.medium-1of2.offset-medium-1of2 .medium-1of2 .offset-medium-1of2
+
+.row
+	h2 .medium-1of2 in .wrapper
+
+.row.wrapper
+	.medium-1of2 .medium-1of2
+	.medium-1of2 .medium-1of2
+
+.row.wrapper
+	.medium-1of2.offset-medium-1of2 .medium-1of2 .offset-medium-1of2
+
+.row
+	h2 .medium-1of2 in .wrapper.b2b
+
+.row.wrapper.b2b
+	.medium-1of2 .medium-1of2
+	.medium-1of2 .medium-1of2
+
+.row.wrapper.b2b
+	.medium-1of2.offset-medium-1of2 .medium-1of2 .offset-medium-1of2
+
+
+
+
+
+
+.row
+	.small-1of2 .small-1of2
+	.small-1of2 .small-1of2
+
+.row
+	.small-1of2.offset-small-1of2 .small-1of2 .offset-small-1of2
+
+.row.wrapper
+	.small-1of2 .small-1of2
+	.small-1of2 .small-1of2
+
+.row.wrapper
+	.small-1of2.offset-small-1of2 .small-1of2 .offset-small-1of2
