--- a/src/templates/partials/_of3.jade
+++ b/src/templates/partials/_of3.jade
@@ -1,5 +1,5 @@
 .row
-  h2 1of3
+  h2 .large-1of3
 
 .row
   .large-1of3 .large-1of3
@@ -12,7 +12,146 @@
 
 .row
   .large-2of3.offset-large-1of3 .large-1of3 .offset-large-1of3
+
 .row
   .large-1of3.offset-large-2of3 .large-1of3 .offset-large-2of3
+
+
+
+
+
+
+.row
+  h2 .large-1of3 in .wrapper
+
+.row.wrapper
+  .large-1of3 .large-1of3
+  .large-1of3 .large-1of3
+  .large-1of3 .large-1of3
+
+.row.wrapper
+  .large-2of3 .large-2of3
+  .large-1of3 .large-1of3
+
+.row.wrapper
+  .large-2of3.offset-large-1of3 .large-1of3 .offset-large-1of3
+  
+.row.wrapper
+  .large-1of3.offset-large-2of3 .large-1of3 .offset-large-2of3
+
+
+
+
+.row
+  h2 1of3 large in .wrapper .b2b 
+
+.row.wrapper.b2b
+  .large-1of3 .large-1of3
+  .large-1of3 .large-1of3
+  .large-1of3 .large-1of3
+
+.row.wrapper.b2b
+  .large-2of3 .large-2of3
+  .large-1of3 .large-1of3
+
+.row.wrapper.b2b
+  .large-2of3.offset-large-1of3 .large-1of3 .offset-large-1of3
+  
+.row.wrapper.b2b
+  .large-1of3.offset-large-2of3 .large-1of3 .offset-large-2of3
+
+
+
+
+
+
+
+
+
+.row
+  .medium-1of3 .medium-1of3
+  .medium-1of3 .medium-1of3
+  .medium-1of3 .medium-1of3
+
+.row
+  .medium-2of3 .medium-2of3
+  .medium-1of3 .medium-1of3
+
+.row
+  .medium-2of3.offset-medium-1of3 .medium-1of3 .offset-medium-1of3
+
+.row
+  .medium-1of3.offset-medium-2of3 .medium-1of3 .offset-medium-2of3
+
+.row.wrapper
+  .medium-1of3 .medium-1of3
+  .medium-1of3 .medium-1of3
+  .medium-1of3 .medium-1of3
+
+.row.wrapper
+  .medium-2of3 .medium-2of3
+  .medium-1of3 .medium-1of3
+
+.row.wrapper
+  .medium-2of3.offset-medium-1of3 .medium-1of3 .offset-medium-1of3
+  
+.row.wrapper
+  .medium-1of3.offset-medium-2of3 .medium-1of3 .offset-medium-2of3
+
+
+
+
+.row.wrapper.b2b
+  .medium-1of3 .medium-1of3
+  .medium-1of3 .medium-1of3
+  .medium-1of3 .medium-1of3
+
+.row.wrapper.b2b
+  .medium-2of3 .medium-2of3
+  .medium-1of3 .medium-1of3
+
+.row.wrapper.b2b
+  .medium-2of3.offset-medium-1of3 .medium-1of3 .offset-medium-1of3
+  
+.row.wrapper.b2b
+  .medium-1of3.offset-medium-2of3 .medium-1of3 .offset-medium-2of3
+
+
+
+
+
+
+
+
+
+.row
+  .small-1of3 .small-1of3
+  .small-1of3 .small-1of3
+  .small-1of3 .small-1of3
+
+.row
+  .small-2of3 .small-2of3
+  .small-1of3 .small-1of3
+
+.row
+  .small-2of3.offset-small-1of3 .small-1of3 .offset-small-1of3
+
+.row
+  .small-1of3.offset-small-2of3 .small-1of3 .offset-small-2of3
+
+.row.wrapper
+  .small-1of3 .small-1of3
+  .small-1of3 .small-1of3
+  .small-1of3 .small-1of3
+
+.row.wrapper
+  .small-2of3 .small-2of3
+  .small-1of3 .small-1of3
+
+.row.wrapper
+  .small-2of3.offset-small-1of3 .small-1of3 .offset-small-1of3
+  
+.row.wrapper
+  .small-1of3.offset-small-2of3 .small-1of3 .offset-small-2of3
 
    
