--- a/src/templates/partials/_of4.jade
+++ b/src/templates/partials/_of4.jade
@@ -20,3 +20,22 @@
 .row
   .large-1of4.offset-large-3of4 .large-1of4
   
+.row.wrapper
+  .large-1of4 .large-1of4
+  .large-1of4 .large-1of4
+  .large-1of4 .large-1of4
+  .large-1of4 .large-1of4
+  .large-3of4 .large-3of4
+  .large-1of4 .large-1of4
+  .large-1of4 .large-1of4
+  .large-3of4 .large-3of4
+
+.row.wrapper
+  .large-3of4.offset-large-1of4 .large-1of4
+  
+.row.wrapper
+  .large-2of4.offset-large-2of4 .large-1of4
+  
+.row.wrapper
+  .large-1of4.offset-large-3of4 .large-1of4
+  
