--- a/src/templates/partials/_of5.jade
+++ b/src/templates/partials/_of5.jade
@@ -39,3 +39,41 @@
 .row
   .large-1of5.offset-large-4of5 .large-1of5
 
+.row.wrapper
+  .large-1of5 .large-1of5
+  .large-1of5 .large-1of5
+  .large-1of5 .large-1of5
+  .large-1of5 .large-1of5
+  .large-1of5 .large-1of5
+
+.row.wrapper
+  .large-2of5 .large-1of5
+  .large-3of5 .large-1of5
+
+.row.wrapper
+  .large-1of5 .large-1of5
+  .large-1of5 .large-1of5
+  .large-3of5 .large-1of5
+
+.row.wrapper
+  .large-1of5 .large-1of5
+  .large-3of5 .large-1of5
+  .large-1of5 .large-1of5
+
+.row.wrapper
+  .large-3of5 .large-1of5
+  .large-1of5 .large-1of5
+  .large-1of5 .large-1of5
+
+.row.wrapper
+  .large-4of5.offset-large-1of5 .large-1of5
+
+.row.wrapper
+  .large-3of5.offset-large-2of5 .large-1of5
+
+.row.wrapper
+  .large-2of5.offset-large-3of5 .large-1of5
+
+.row.wrapper
+  .large-1of5.offset-large-4of5 .large-1of5
+
