--- a/src/templates/partials/_of7.jade
+++ b/src/templates/partials/_of7.jade
@@ -11,6 +11,26 @@
   .large-1of7 .large-1of7
 
 .row
+  .large-1of7 .large-1of7
+  .large-2of7 .large-2of7
+  .large-3of7 .large-1of7
+  .large-1of7 .large-1of7
+
+.row
+  .large-4of7 .large-4of7
+  .large-2of7 .large-2of7
+  .large-1of7 .large-1of7
+
+.row
+  .large-5of7 .large-5of7
+  .large-2of7 .large-2of7
+
+.row
+  .large-6of7 .large-6of7
+  .large-2of7 .large-2of7
+
+
+.row
   .large-6of7.offset-large-1of7 .large-1of7
 
 .row
@@ -26,4 +46,50 @@
   .large-2of7.offset-large-5of7 .large-1of7
 
 .row
+  .large-1of7.offset-large-6of7 .large-1of7
+
+.row.wrapper
+  .large-1of7 .large-1of7
+  .large-1of7 .large-1of7
+  .large-1of7 .large-1of7
+  .large-1of7 .large-1of7
+  .large-1of7 .large-1of7
+  .large-1of7 .large-1of7
+  .large-1of7 .large-1of7
+
+.row.wrapper
+  .large-1of7 .large-1of7
+  .large-2of7 .large-2of7
+  .large-3of7 .large-1of7
+  .large-1of7 .large-1of7
+
+.row.wrapper
+  .large-4of7 .large-4of7
+  .large-2of7 .large-2of7
+  .large-1of7 .large-1of7
+
+.row.wrapper
+  .large-5of7 .large-5of7
+  .large-2of7 .large-2of7
+
+.row.wrapper
+  .large-6of7 .large-6of7
+  .large-1of7 .large-1of7
+
+.row.wrapper
+  .large-6of7.offset-large-1of7 .large-1of7
+
+.row.wrapper
+  .large-5of7.offset-large-2of7 .large-1of7
+
+.row.wrapper
+  .large-4of7.offset-large-3of7 .large-1of7
+
+.row.wrapper
+  .large-3of7.offset-large-4of7 .large-1of7
+
+.row.wrapper
+  .large-2of7.offset-large-5of7 .large-1of7
+
+.row.wrapper
   .large-1of7.offset-large-6of7 .large-1of7
