--- a/src/templates/partials/_of8.jade
+++ b/src/templates/partials/_of8.jade
@@ -12,6 +12,24 @@
   .large-1of8 .large-1of8
 
 .row
+  .large-2of8 .large-1of8
+  .large-3of8 .large-1of8
+  .large-1of8 .large-1of8
+  .large-2of8 .large-1of8
+.row
+  .large-1of8 .large-1of8
+  .large-4of8 .large-1of8
+  .large-2of8 .large-1of8
+  .large-1of8 .large-1of8
+.row
+  .large-5of8 .large-1of8
+  .large-2of8 .large-1of8
+  .large-1of8 .large-1of8
+.row
+  .large-6of8 .large-1of8
+  .large-2of8 .large-1of8
+  
+.row
   .large-7of8.offset-large-1of8 .large-1of8
 
 .row
@@ -30,4 +48,35 @@
   .large-2of8.offset-large-6of8 .large-1of8
 
 .row
+  .large-1of8.offset-large-7of8 .large-1of8
+
+.row.wrapper
+  .large-1of8 .large-1of8
+  .large-1of8 .large-1of8
+  .large-1of8 .large-1of8
+  .large-1of8 .large-1of8
+  .large-1of8 .large-1of8
+  .large-1of8 .large-1of8
+  .large-1of8 .large-1of8
+  .large-1of8 .large-1of8
+
+.row.wrapper
+  .large-7of8.offset-large-1of8 .large-1of8
+
+.row.wrapper
+  .large-6of8.offset-large-2of8 .large-1of8
+
+.row.wrapper
+  .large-5of8.offset-large-3of8 .large-1of8
+
+.row.wrapper
+  .large-4of8.offset-large-4of8 .large-1of8
+
+.row.wrapper
+  .large-3of8.offset-large-5of8 .large-1of8
+
+.row.wrapper
+  .large-2of8.offset-large-6of8 .large-1of8
+
+.row.wrapper
   .large-1of8.offset-large-7of8 .large-1of8
