--- a/src/templates/partials/_of9.jade
+++ b/src/templates/partials/_of9.jade
@@ -13,6 +13,24 @@
   .large-1of9 .large-1of9
 
 .row
+  .large-2of9 .large-1of9
+  .large-3of9 .large-1of9
+  .large-4of9 .large-1of9
+.row
+  .large-5of9 .large-1of9
+  .large-1of9 .large-1of9
+  .large-3of9 .large-1of9
+.row
+  .large-6of9 .large-1of9
+  .large-3of9 .large-1of9
+.row
+  .large-7of9 .large-1of9
+  .large-2of9 .large-1of9
+.row
+  .large-8of9 .large-1of9
+  .large-1of9 .large-1of9
+
+.row
   .large-8of9.offset-large-1of9 .large-1of9
 
 .row
@@ -34,4 +52,39 @@
   .large-2of9.offset-large-7of9 .large-1of9
 
 .row
+  .large-1of9.offset-large-8of9 .large-1of9
+  
+.row.wrapper
+  .large-1of9 .large-1of9
+  .large-1of9 .large-1of9
+  .large-1of9 .large-1of9
+  .large-1of9 .large-1of9
+  .large-1of9 .large-1of9
+  .large-1of9 .large-1of9
+  .large-1of9 .large-1of9
+  .large-1of9 .large-1of9
+  .large-1of9 .large-1of9
+
+.row.wrapper
+  .large-8of9.offset-large-1of9 .large-1of9
+
+.row.wrapper
+  .large-7of9.offset-large-2of9 .large-1of9
+
+.row.wrapper
+  .large-6of9.offset-large-3of9 .large-1of9
+
+.row.wrapper
+  .large-5of9.offset-large-4of9 .large-1of9
+
+.row.wrapper
+  .large-4of9.offset-large-5of9 .large-1of9
+
+.row.wrapper
+  .large-3of9.offset-large-6of9 .large-1of9
+
+.row.wrapper
+  .large-2of9.offset-large-7of9 .large-1of9
+
+.row.wrapper
   .large-1of9.offset-large-8of9 .large-1of9
