--- a/src/sass/_variables.sass
+++ b/src/sass/_variables.sass
@@ -8,9 +8,9 @@ $gridGutterSmall: 30px
 // ********************
 // Media Queries 
 // ********************
-$smallMax: 400px
-$mediumMin: 401px 
-$mediumMax: 800px
+$smallMax: 40em 
+$mediumMin: 40.063em
+$mediumMax: 64em
 
-$mqSmall: max-width 40em 
-$mqMedium: 40.063em 64em
+$mqSmall: max-width $smallMax
+$mqMedium: $mediumMin $mediumMax
