--- a/src/templates/partials/_of10.jade
+++ b/src/templates/partials/_of10.jade
@@ -40,3 +40,43 @@
 
 .row
   .large-1of10.offset-large-9of10 .large-1of10
+
+.row.wrapper
+  .large-1of10 .large-1of10
+  .large-1of10 .large-1of10
+  .large-1of10 .large-1of10
+  .large-1of10 .large-1of10
+  .large-1of10 .large-1of10
+  .large-1of10 .large-1of10
+  .large-1of10 .large-1of10
+  .large-1of10 .large-1of10
+  .large-1of10 .large-1of10
+  .large-1of10 .large-1of10
+
+
+.row.wrapper
+  .large-9of10.offset-large-1of10 .large-1of10
+
+.row.wrapper
+  .large-8of10.offset-large-2of10 .large-1of10
+
+.row.wrapper
+  .large-7of10.offset-large-3of10 .large-1of10
+
+.row.wrapper
+  .large-6of10.offset-large-4of10 .large-1of10
+
+.row.wrapper
+  .large-5of10.offset-large-5of10 .large-1of10
+
+.row.wrapper
+  .large-4of10.offset-large-6of10 .large-1of10
+
+.row.wrapper
+  .large-3of10.offset-large-7of10 .large-1of10
+
+.row.wrapper
+  .large-2of10.offset-large-8of10 .large-1of10
+
+.row.wrapper
+  .large-1of10.offset-large-9of10 .large-1of10
