--- a/src/templates/partials/_of12.jade
+++ b/src/templates/partials/_of12.jade
@@ -1,274 +1,139 @@
-doctype html(lang='en')
-head
-  meta(charset='utf-8')
-
-    title Multigrid system
-
-    meta(name='description', content='A framework for easily creating beautiful presentations using HTML')
-
-    meta(name='author', content='Piotr Sikora - fedojo.com')
-    meta(name='viewport', content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui')
-
-    link(rel='stylesheet', href='css/style.css')
-
-
-  body.debug
-    .row
-      h1 Large
-
-    .row
-      h2 1of2
-
-    .row
-      .large-1of2 .large-1of2
-
-      .large-1of2 .large-1of2
-
-    .row
-      h2 1of3
-
-    .row
-      .large-1of3 .large-1of3
-
-      .large-1of3 .large-1of3
-
-      .large-1of3 .large-1of3
-
-    .row
-      .large-2of3 .large-2of3
-
-      .large-1of3 .large-1of3
-
-    .row
-      h2 1of4
-
-    .row
-      .large-1of4 .large-1of4
-
-      .large-1of4 .large-1of4
-
-      .large-1of4 .large-1of4
-
-      .large-1of4 .large-1of4
-
-      .large-3of4 .large-3of4
-
-      .large-1of4 .large-1of4
-
-      .large-1of4 .large-1of4
-
-      .large-3of4 .large-3of4
-
-    .row
-      h2 1of5
-
-    .row
-      .large-1of5 .large-1of5
-
-      .large-1of5 .large-1of5
-
-      .large-1of5 .large-1of5
-
-      .large-1of5 .large-1of5
-
-      .large-1of5 .large-1of5
-
-    .row
-      .large-2of5 .large-1of5
-
-      .large-3of5 .large-1of5
-
-    .row
-      .large-1of5 .large-1of5
-
-      .large-1of5 .large-1of5
-
-      .large-3of5 .large-1of5
-
-    .row
-      .large-1of5 .large-1of5
-
-      .large-3of5 .large-1of5
-
-      .large-1of5 .large-1of5
-
-    .row
-      .large-3of5 .large-1of5
-
-      .large-1of5 .large-1of5
-
-      .large-1of5 .large-1of5
-
-    .row
-      h2 1of6
-
-    .row
-      .large-1of6 .large-1of6
-
-      .large-1of6 .large-1of6
-
-      .large-1of6 .large-1of6
-
-      .large-1of6 .large-1of6
-
-      .large-1of6 .large-1of6
-
-      .large-1of6 .large-1of6
-
-    .row
-      h2 1of7
-
-    .row
-      .large-1of7 .large-1of7
-
-      .large-1of7 .large-1of7
-
-      .large-1of7 .large-1of7
-
-      .large-1of7 .large-1of7
-
-      .large-1of7 .large-1of7
-
-      .large-1of7 .large-1of7
-
-      .large-1of7 .large-1of7
-
-    .row
-      h2 1of8
-
-    .row
-      .large-1of8 .large-1of8
-
-      .large-1of8 .large-1of8
-
-      .large-1of8 .large-1of8
-
-      .large-1of8 .large-1of8
-
-      .large-1of8 .large-1of8
-
-      .large-1of8 .large-1of8
-
-      .large-1of8 .large-1of8
-
-      .large-1of8 .large-1of8
-
-    .row
-      h2 1of9
-    | &#x9;&#x9;
-    .row
-      .large-1of9 .large-1of9
-      | &#x9;&#x9;&#x9;
-      .large-1of9 .large-1of9
-      | &#x9;&#x9;&#x9;
-      .large-1of9 .large-1of9
-      | &#x9;&#x9;&#x9;
-      .large-1of9 .large-1of9
-      | &#x9;&#x9;&#x9;
-      .large-1of9 .large-1of9
-      | &#x9;&#x9;&#x9;
-      .large-1of9 .large-1of9
-      | &#x9;&#x9;&#x9;
-      .large-1of9 .large-1of9
-      | &#x9;&#x9;&#x9;
-      .large-1of9 .large-1of9
-      | &#x9;&#x9;&#x9;
-      .large-1of9 .large-1of9
-    | &#x9;&#x9;
-    .row
-      h2 1of10
-    | &#x9;&#x9;
-    .row
-      .large-1of10 .large-1of10
-      | &#x9;&#x9;&#x9;
-      .large-1of10 .large-1of10
-      | &#x9;&#x9;&#x9;
-      .large-1of10 .large-1of10
-      | &#x9;&#x9;&#x9;
-      .large-1of10 .large-1of10
-      | &#x9;&#x9;&#x9;
-      .large-1of10 .large-1of10
-      | &#x9;&#x9;&#x9;
-      .large-1of10 .large-1of10
-      | &#x9;&#x9;&#x9;
-      .large-1of10 .large-1of10
-      | &#x9;&#x9;&#x9;
-      .large-1of10 .large-1of10
-      | &#x9;&#x9;&#x9;
-      .large-1of10 .large-1of10
-      | &#x9;&#x9;&#x9;
-      .large-1of10 .large-1of10
-    | &#x9;&#x9;
-    .row
-      h1 Large + Medium
-    | &#x9;&#x9;
-    .row
-      .medium-1of2.large-1of2 .large-1of2
-      | &#x9;&#x9;&#x9;
-      .medium-1of2.large-1of2 .large-1of2
-    | &#x9;&#x9;
-    .row
-      .medium-1of5.large-1of4 .large-1of4
-      | &#x9;&#x9;&#x9;
-      .medium-1of5.large-1of4 .large-1of4
-      | &#x9;&#x9;&#x9;
-      .medium-1of5.large-1of4 .large-1of4
-      | &#x9;&#x9;&#x9;
-      .medium-1of5.large-1of4 .large-1of4
-    | &#x9;&#x9;
-    .row
-      .large-1of5 .large-1of5
-      | &#x9;&#x9;&#x9;
-      .large-1of5 .large-1of5
-      | &#x9;&#x9;&#x9;
-      .large-1of5 .large-1of5
-      | &#x9;&#x9;&#x9;
-      .large-1of5 .large-1of5
-      | &#x9;&#x9;&#x9;
-      .large-1of5 .large-1of5
-    | &#x9;&#x9;
-    .row
-      .large-1of8
-        p .large-1of8
-      | &#x9;&#x9;&#x9;
-      .large-1of8
-        p .large-1of8
-      | &#x9;&#x9;&#x9;
-      .large-1of8
-        p .large-1of8
-      | &#x9;&#x9;&#x9;
-      .large-1of8
-        p .large-1of8
-      | &#x9;&#x9;&#x9;
-      .large-1of8
-        p .large-1of8
-      | &#x9;&#x9;&#x9;
-      .large-1of8
-        p .large-1of8
-      | &#x9;&#x9;&#x9;
-      .large-1of8
-        p .large-1of8
-      | &#x9;&#x9;&#x9;
-      .large-1of8
-        p .large-1of8
-    | &#x9;&#x9;
-    .row
-      .small-1of5.medium-1of4.large-1of10 .large-1of10
-      | &#x9;&#x9;&#x9;
-      .small-1of5.medium-1of4.large-1of10 .large-1of10
-      | &#x9;&#x9;&#x9;
-      .small-1of5.medium-1of4.large-1of10 .large-1of10
-      | &#x9;&#x9;&#x9;
-      .small-1of5.medium-1of4.large-1of10 .large-1of10
-      | &#x9;&#x9;&#x9;
-      .small-1of5.medium-1of5.large-1of10 .large-1of10
-      | &#x9;&#x9;&#x9;
-      .small-1of4.medium-1of5.large-1of10 .large-1of10
-      | &#x9;&#x9;&#x9;
-      .small-1of4.medium-1of5.large-1of10 .large-1of10
-      | &#x9;&#x9;&#x9;
-      .small-1of4.medium-1of5.large-1of10 .large-1of10
-      | &#x9;&#x9;&#x9;
-      .small-1of4.medium-1of5.large-1of10 .large-1of10
-      | &#x9;&#x9;&#x9;
-      .large-1of10 .large-1of10
+.row
+  h2 1of12
+
+  .row
+    .large-1of12 .large-1of12
+    .large-1of12 .large-1of12
+    .large-1of12 .large-1of12
+    .large-1of12 .large-1of12
+    .large-1of12 .large-1of12
+    .large-1of12 .large-1of12
+    .large-1of12 .large-1of12
+    .large-1of12 .large-1of12
+    .large-1of12 .large-1of12
+    .large-1of12 .large-1of12
+    .large-1of12 .large-1of12
+    .large-1of12 .large-1of12 
+.row
+    .large-2of12 .large-1of12
+    .large-3of12 .large-1of12
+    .large-4of12 .large-1of12
+    .large-2of12 .large-1of12
+.row
+    .large-5of12 .large-1of12
+    .large-6of12 .large-1of12
+
+.row
+    .large-7of12 .large-1of12
+    .large-2of12 .large-1of12
+    .large-3of12 .large-1of12
+
+.row
+    .large-8of12 .large-1of12
+    .large-4of12 .large-4of12
+
+.row
+    .large-9of12 .large-9of12
+    .large-3of12 .large-3of12
+
+.row
+    .large-10of12 .large-10of12
+    .large-2of12 .large-2of12
+    
+
+
+.row.wrapper
+    h2 1of12 in wrapper
+
+.row.wrapper          
+    .large-1of12 .large-1of12
+    .large-1of12 .large-1of12
+    .large-1of12 .large-1of12
+    .large-1of12 .large-1of12
+    .large-1of12 .large-1of12
+    .large-1of12 .large-1of12
+    .large-1of12 .large-1of12
+    .large-1of12 .large-1of12
+    .large-1of12 .large-1of12
+    .large-1of12 .large-1of12
+    .large-1of12 .large-1of12
+    .large-1of12 .large-1of12
+
+.row.wrapper
+    .large-2of12 .large-1of12
+    .large-3of12 .large-1of12
+    .large-4of12 .large-1of12
+    .large-2of12 .large-1of12
+    .large-1of12 .large-1of12
+
+.row.wrapper
+    .large-5of12 .large-1of12
+    .large-6of12 .large-1of12
+    .large-1of12 .large-1of12
+    
+.row.wrapper
+    .large-7of12 .large-1of12
+    .large-2of12 .large-1of12
+    .large-3of12 .large-1of12
+
+.row.wrapper
+    .large-8of12 .large-1of12
+    .large-4of12 .large-4of12
+
+.row.wrapper
+    .large-9of12 .large-9of12
+    .large-3of12 .large-3of12
+
+.row.wrapper
+    .large-10of12 .large-10of12
+    .large-2of12 .large-2of12
+    
+
+.row.wrapper
+    h2 1of12 in .wrapper.b2b
+
+.row.wrapper.b2b     
+    .large-1of12 .large-1of12
+    .large-1of12 .large-1of12
+    .large-1of12 .large-1of12
+    .large-1of12 .large-1of12
+    .large-1of12 .large-1of12
+    .large-1of12 .large-1of12
+    .large-1of12 .large-1of12
+    .large-1of12 .large-1of12
+    .large-1of12 .large-1of12
+    .large-1of12 .large-1of12
+    .large-1of12 .large-1of12
+    .large-1of12 .large-1of12
+
+.row.wrapper.b2b
+    .large-2of12 .large-1of12
+    .large-3of12 .large-1of12
+    .large-4of12 .large-1of12
+    .large-2of12 .large-1of12
+    .large-1of12 .large-1of12
+
+.row.wrapper.b2b
+    .large-5of12 .large-1of12
+    .large-6of12 .large-1of12
+    .large-1of12 .large-1of12
+
+.row.wrapper.b2b
+    .large-7of12 .large-1of12
+    .large-2of12 .large-1of12
+    .large-3of12 .large-1of12
+
+.row.wrapper.b2b
+    .large-8of12 .large-1of12
+    .large-4of12 .large-4of12
+
+.row.wrapper.b2b
+    .large-9of12 .large-9of12
+    .large-3of12 .large-3of12
+
+.row.wrapper.b2b
+    .large-10of12 .large-10of12
+    .large-2of12 .large-2of12
+    
+
+    
