Quick structure fixes

--- a/src/sass/_fedojo.grid.sass
+++ b/src/sass/_fedojo.grid.sass
@@ -53,3 +53,62 @@
 
 			@include breakpoint($mqMedium)
 				margin-left: 0
+
+
+.row
+	&:after 
+		content: " "
+		visibility: hidden
+		display: block
+		height: 0
+		clear: both
+
+[class|="small"]
+	box-sizing: border-box
+	padding:
+		left: $gridGutterSmall/2
+		right: $gridGutterSmall/2
+
+	float: left 
+
+[class|="medium"]
+	box-sizing: border-box
+	padding:
+		left: $gridGutterMedium/2
+		right: $gridGutterMedium/2
+
+	float: left
+
+[class|="large"],
+	box-sizing: border-box
+	padding:
+		left: $gridGutterLarge/2
+		right: $gridGutterLarge/2
+
+	float: left
+
+@include buildGrid(2)
+@include buildGrid(3)
+@include buildGrid(4)
+@include buildGrid(5)
+@include buildGrid(6)
+@include buildGrid(7)
+@include buildGrid(8)
+@include buildGrid(9)
+@include buildGrid(10)
+@include buildGrid(11)
+@include buildGrid(12)
+@include buildGrid(13)
+@include buildGrid(14)
+@include buildGrid(15)
+@include buildGrid(16)
+
+.wrapper
+	max-width: 1200px
+	margin: 0 auto
+	padding: 0 $gridGutterLarge
+
+	&.b2b
+		padding: 0
+
+	
