--- a/src/sass/_fedojo.grid.settings.sass
+++ b/src/sass/_fedojo.grid.settings.sass
@@ -6,11 +6,17 @@ $gridGutterMedium: 30px
 $gridGutterSmall: 30px
 
 // ********************
-// Media Queries 
+// Media Queries
 // ********************
-$smallMax: 40em 
+$smallMax: 40em
 $mediumMin: 40.063em
 $mediumMax: 64em
 
 $mqSmall: max-width $smallMax
 $mqMedium: $mediumMin $mediumMax
+
+
+// ********************
+// Wrapper maxWidth
+// ********************
+$wrapperMaxWidth: 1200px
